# flutter_native_app_opencv

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native_add.cpp
android/app/src/main/kotlin/com/example/project_native/: MainActivity.kt
img_ota/: DA16200_FRTOS-GEN01-01-48589f13c-004594.img  DA16200_FRTOS-GEN01-01-48589f13c-005000.img  DA16200_FRTOS-GEN01-01-98e58a5d3-006374.img
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: circle.dart  image_data_Uint8List.dart  main.dart  native_add.dart  rectan_face.dart  required_args.dart
test/: widget_test.dart
